Bug 254 - I just cooked this button covers recipe tiitle

--- a/app/assets/stylesheets/realmealz.css.scss
+++ b/app/assets/stylesheets/realmealz.css.scss
@@ -78,6 +78,8 @@ ul,ol { margin-top: 0; margin-bottom: 0.5em; }
   padding: 20px;
 }
 
+.clear_both { clear: both; }
+
 /**** Widths and height (indents show structure) *****/
 html { }
   body {  }
@@ -394,11 +396,14 @@ body {
 
 .discover-detail-title {
   display: block;
-  width: 80%;
   height: auto;
   padding-left: 40px;
+  padding-right: 70px;
   padding-bottom: 10px;
   vertical-align: middle;
+}
+
+.discover-detail-title.discover-detail-big {
 }
 
 .discover-balance {
@@ -416,9 +421,7 @@ body {
 }
 
 .discover-recipe-cook {
-  position: absolute;
-  top: 0px;
-  right: 60px;
+  display: table-cell;
 }
 
 .discover-recipe-intro {
@@ -537,10 +540,6 @@ body {
 	-webkit-column-gap: 10px;
 	column-count: 3;
 	column-gap: 10px;
-}
-
-.discover-recipe-edit {
-  float: right;
 }
 
 /*** Discover Like bar ***/
@@ -1267,16 +1266,19 @@ body {
   height: 200px;
 }
 
+#cook-title {
+  display: table-cell;
+  width: 100%;
+}
+
 #cook-recipe-edit {
-  position: absolute;
-  top: 10px;
-  right: 220px;
+  display: table-cell;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 #cook-done-cooking {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  display: table-cell;
 }
 
 #cook-meals-column {
